Reverted compat Java version to 8; bumped version to 0.4-dev3
Set source/target compat Java version to 8
Upgraded dependencies (lev, spring-boot-starter, jupiter)
Added logging of LOCALAPPDATA, APPDATA env variables, and path to plugins.txt
Clean-up whitespace (ActorValue, SUMGUI)